--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -115,6 +115,7 @@
 
       @include mobile {
         width: 100%;
+        box-shadow: unset;
       }
       &:first-child {
         padding-top: 40px;
