--- a/src/sass/components/_timerCount.scss
+++ b/src/sass/components/_timerCount.scss
@@ -1,7 +1,20 @@
 .timer__count {
   background-color: $primary-color;
   // height: 300px;
-
+  @include mobile {
+    &-col {
+      text-align: center;
+    }
+    .counter__img {
+      display: none;
+    }
+    .clock__top-content {
+      text-align: center;
+    }
+    .clock__wrapper {
+      justify-content: center;
+    }
+  }
   img {
     width: 70%;
     height: 70%;
