--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -7,3 +7,4 @@
 @import "./components/services";
 @import "./components/productCart";
 @import "./components/timerCount";
+@import "./components/common-section";
