--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -8,3 +8,5 @@
 @import "./components/productCart";
 @import "./components/timerCount";
 @import "./components/common-section";
+@import "./components/shop";
+@import "./components/product-details";
