--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -10,3 +10,4 @@
 @import "./components/common-section";
 @import "./components/shop";
 @import "./components/product-details";
+@import "./components/cart";
