--- a/src/sass/components/_productCart.scss
+++ b/src/sass/components/_productCart.scss
@@ -39,7 +39,7 @@
 
       &:hover {
         color: white;
-        background-color: $primary-color;
+        // background-color: $primary-color;
         opacity: 1;
       }
     }
