--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -6,6 +6,8 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  scroll-behavior: smooth;
+  transition: scroll-behavior 0.2s;
 }
 
 body {
